--- a/package.json
+++ b/package.json
@@ -6,21 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write \"src/**/**/*.{ts,tsx,css}\""
   },
   "dependencies": {
+    "@mercadopago/sdk-react": "^1.0.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.6.0",
+    "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.0",
+    "mercadopago": "^2.4.0",
+    "next": "14.2.28",
+    "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.28"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.28"
+    "eslint-config-next": "14.2.28",
+    "postcss": "^8",
+    "prettier": "^3.5.3",
+    "prisma": "^6.6.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
