--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
     "next": "14.2.28",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-google-recaptcha": "^3.1.0",
+    "react-toastify": "^11.0.5",
+    "resend": "^4.4.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-google-recaptcha": "^2.1.9",
     "eslint": "^8",
     "eslint-config-next": "14.2.28",
     "postcss": "^8",
