--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "mercadopago": "^2.4.0",
     "next": "14.2.28",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
+    "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "resend": "^4.4.1",
     "zustand": "^5.0.3"
